--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -7,7 +7,7 @@
     <string name="xposed_not_active">เวอร์ชั่นล่าสุด Xposed ยังไม่ได้เปิดใช้งาน ต้องการติดตั้งเฟรมเวิร์คและรีบูต?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome">ยินดีต้อนรับสู่ <b>ตัวติดตั้ง Xposed</b>\nกรุณาเลือกสิ่งที่ต้องการจะทำ:</string>
+    <string name="welcome">ยินดีต้อนรับสู่ <b>Xposed Installer</b>\nกรุณาเลือกสิ่งที่ต้องการจะทำ:</string>
     <string name="tabInstall">เฟรมเวิร์ค</string>
     <string name="tabInstallDescription">สามารถจัดการเฟรมเวิร์คที่คุณต้องการได้</string>
     <string name="tabModules">โมดูล</string>
@@ -38,15 +38,15 @@
 
     <!-- Installer tab -->
     <string name="install">ติดตั้ง/อัพเดท</string>
-    <string name="uninstall">ถอนติดตั้ง</string>
+    <string name="uninstall">ถอนการติดตั้ง</string>
     <string name="installedVersion">ใช้งาน</string>
     <string name="latestVersion">ค่าเริ่มต้น</string>
     <string name="versions">เวอร์ชั่น:</string>
     <string name="install_header_reboot">รีบูต</string>
-    <string name="soft_reboot">ซอร์ฟรีบูต</string>
+    <string name="soft_reboot">ซอฟท์รีบูต</string>
     <string name="reboot">รีบูต</string>
     <string name="areyousure">แน่ใจหรือไม่?</string>
-    <string name="phone_not_compatible">Xposed ไม่สามารถเข้ากันได้กับเวอร์ชั่น Android SDK %1$d หรือสถาปัตยกรรมประมวลผล (%2$s)ของคุณ</string>
+    <string name="phone_not_compatible">Xposed ไม่สามารถเข้ากันได้กับเวอร์ชั่น Android SDK %1$d หรือสถาปัตยกรรมประมวลผล (%2$s) ของคุณ</string>
     <string name="not_tested_but_compatible">Xposed ยังไม่ได้ทดสอบกับเวอร์ชั่น Android SDK version %d แต่อาจจะเข้ากันได้ คุณสามารถทดลองติดตั้งเฟรมเวิร์คเพื่อทดลองใช้งาน</string>
     <string name="reboot_failed">รีบูตล้มเหลว กรุณาใช้ฟังก์ชั่นรีบูตโทรศัพท์</string>
     <string name="auto_flash_note">%s จะแฟลชอัตโนมัติเมื่อคุณกด "ตกลง"</string>
@@ -58,7 +58,7 @@
     <string name="dont_show_again">ไม่ต้องแสดงอีกครั้ง</string>
     <string name="install_known_issue">ดูเหมือนจะเกิดปัญหา (\"%s\") กับรอมของคุณ การติดตั้ง Xposed อาจจะไม่เวิร์คหรือทำให้เกิดปัญหาร้ายแรง คลิกที่นี่สำหรับรายละเอียดเกี่ยวกับปัญหา</string>
     <string name="install_reverted">app_process เวอร์ชั่น \"%1$s\" ถูกติดตั้งก่อนหน้านี้แต่เวอร์ชั่น \"%2$s\" ถูกพบในขณะนี้ หากคุณไม่ต้องการเรียกคืนไฟล์เก่า คุณอาจจะต้องการลองติดตั้งด้วยโหมดกู้คืน (อัตโนมัติหรือด้วยตัวเอง)</string>
-    <string name="uninstall_reverted">app_process ถูกถอนติดตั้งก่อนหน้านี้แต่เวอร์ชั่น \"%s\" ถูกพบในขณะนี้ หากคุณไม่ต้องการเรียกคืนไฟล์เก่า คุณอาจจะต้องการลองถอนติดตั้งด้วยโหมดกู้คืน (อัตโนมัติหรือด้วยตัวเอง)</string>
+    <string name="uninstall_reverted">app_process ถูกถอนการติดตั้งก่อนหน้านี้แต่เวอร์ชั่น \"%s\" ถูกพบในขณะนี้ หากคุณไม่ต้องการเรียกคืนไฟล์เก่า คุณอาจจะต้องการลองถอนการติดตั้งด้วยโหมดกู้คืน (อัตโนมัติหรือด้วยตัวเอง)</string>
     <string name="tap_to_dismiss">แตะเพื่อปิด</string>
     <string name="sdcard_location">การ์ดความจำ: %s</string>
     <string name="installation_lollipop">เฟรมเวิร์คยังไม่ได้ถูกติดตั้ง กรุณาดาวน์โหลดไฟล์ ZIP ล่าสุดจาก XDA และแฟลชด้วยตัวเองในโหมดกู้คืน</string>
@@ -72,7 +72,7 @@
     <string name="file_mounting_writable">กำลังเม้าท์ %s สามารถเขียนได้&#8230;</string>
     <string name="file_mount_writable_failed">ไม่สามารถเม้าท์ %s สามารถเขียนได้</string>
     <string name="file_trying_to_continue">ลองทางเลือกอื่น&#8230;</string>
-    <string name="file_backup_already_exists">มีสำรองข้อมูลอยู่แล้วที่ %s</string>
+    <string name="file_backup_already_exists">สำรองข้อมูลอยู่แล้วที่ %s</string>
     <string name="file_backup_not_found">ไม่พบสำรองข้อมูลที่ %s</string>
     <string name="file_backup_failed">สร้างสำรองข้อมูลล้มเหลวที่ %s</string>
     <string name="file_backup_successful">สร้างสำรองข้อมูลที่ %s</string>
@@ -81,7 +81,7 @@
     <string name="file_copy_failed">ไม่สามารถคัดลอก %1$s ไปยัง %2$s</string>
     <string name="file_move_failed">ไม่สามารถย้าย %1$s ไปยัง %2$s</string>
     <string name="file_set_perms_failed">ไม่สามารถตั้งการอนุญาตสำหรับ %s</string>
-    <string name="file_set_owner_failed">ไม่สามรถตั้งเจ้าของสำหรับ %s</string>
+    <string name="file_set_owner_failed">ไม่สามารถตั้งเจ้าของสำหรับ %s</string>
     <string name="file_removing">กำลังลบ %s&#8230;</string>
     <string name="file_remove_failed">ไม่สามารถลบ %s</string>
     <string name="file_creating_directory">กำลังสร้างไดเรกเทอรี่ %s&#8230;</string>
@@ -107,8 +107,8 @@
     <string name="module_launch">เรียกใช้งาน UI</string>
     <string name="module_download_updates">ดาวน์โหลด/อัพเดท</string>
     <string name="module_support">สนับสนุน</string>
-    <string name="module_app_info">ข้อมูลแอปพลิเคชัน</string>
-    <string name="module_uninstall">ถอนติดตั้ง</string>
+    <string name="module_app_info">ข้อมูลแอปพลิเคชั่น</string>
+    <string name="module_uninstall">ถอนการติดตั้ง</string>
 
     <!-- Download tab -->
     <string name="menuSearch">ค้นหา</string>
@@ -255,7 +255,7 @@
     <string name="downloadZipOk">%1$s ดาวน์โหลดถูกต้อง</string>
     <string name="permissionGranted">ร้องขอการอนุญาตแล้ว</string>
     <string name="permissionNotGranted">คุณสมบัตินี้จะไม่ทำงาน หากไม่ได้รับการอนุญาตเพื่อเขียนข้อมูลไปยังที่เก็บข้อมูลภายนอก</string>
-    <string name="downloadUninstaller">ถอนติดตั้งดาวน์โหลด</string>
+    <string name="downloadUninstaller">ถอนการติดตั้งดาวน์โหลด</string>
     <string name="selectFile">เลือกไฟล์ดาวน์โหลด</string>
     <string name="xposedZipNotFound">ไม่พบ Zip หรืออาจจะมีเวอร์ชั่นใหม่แล้ว</string>
     <string name="warningArchitecture">เลือกไฟล์ Zip ให้ถูกต้องการกับสถาปัตยกรรม?\nหากตดตั้งผิดอาจจะทำให้โทรศัพท์เสียได้!</string>
