--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -256,7 +256,7 @@
     <string name="permissionGranted">授予權限</string>
     <string name="permissionNotGranted">未取得寫入外部存儲空間權限，此功能將無法正常運作。</string>
     <string name="downloadUninstaller">下載移除工具</string>
-    <string name="selectFile">選擇要下載的檔案</string>
+    <string name="selectFile">選擇已下載的檔案</string>
     <string name="xposedZipNotFound">找不到 ZIP 檔案，可能是新版本發布了。</string>
     <string name="warningArchitecture">您是否選擇正確架構的 XPOSED ZIP？\n安裝錯誤的 ZIP 可能會損壞您的手機！</string>
     <string name="help">幫助</string>
