Please update strings.xml SK

--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -309,5 +309,7 @@
     <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
     <string name="chrome_custom_tabs_summ">Otvoriť odkazy v internom prehliadači</string>
     <string name="scroll_bottom">Prejsť dole</string>
+    <string name="open_drawer_summ">Otvoriť navigačné menu po spustení aplikácie</string>
+    <string name="open_drawer">Automaticky otvoriť navigačné menu</string>
 
 </resources>
