--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -310,6 +310,6 @@
     <string name="chrome_custom_tabs_summ">於內置瀏覽器開啟連結</string>
     <string name="scroll_bottom">捲動至到底端</string>
     <string name="open_drawer_summ">啟動時自動開啟抽屜式導航欄</string>
-    <string name="open_要">自動開啟抽屜式導航欄</string>
+    <string name="open_drawer">自動開啟抽屜式導航欄</string>
 
 </resources>
