--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -306,7 +306,7 @@
     <string name="share_app">Condividi app</string>
     <string name="share_app_text">Vedi Xposed Installer in Material Design! %s</string>
     <string name="disable_xposed">Disabilita Xposed</string>
-    <string name="status">Stato</string>
+    <string name="status">Stato Xposed</string>
     <string name="xposed_off_next_reboot">Xposed framework sarà disabilitato al prossimo riavvio</string>
     <string name="xposed_on_next_reboot">Xposed framework sarà abilitato al prossimo riavvio</string>
 
