--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -25,6 +25,17 @@
     <string name="tabAbout">Über</string>
     <string name="tabAboutDescription">Erfahre mehr darüber, wer hinter Xposed steckt.</string>
 
+    <!-- navigation view items -->
+    <string name="nav_item_install">Framework</string>
+    <string name="nav_item_modules">Module</string>
+    <string name="nav_item_download">Download</string>
+    <string name="nav_item_settings">Einstellungen</string>
+    <string name="nav_item_support">Support</string>
+    <string name="nav_item_logs">Logs</string>
+    <string name="nav_item_about">Über</string>
+    <string name="navigation_drawer_open">Öffne Navigations-Menü</string>
+    <string name="navigation_drawer_close">Schließe Navigations-Menü</string>
+
     <!-- Installer tab -->
     <string name="install">Installieren/Aktualisieren</string>
     <string name="uninstall">Deinstallieren</string>
@@ -50,6 +61,10 @@
     <string name="uninstall_reverted">app_process wurde zuvor deinstalliert, aber jetzt wurde Version \"%s\" gefunden. Wenn du nicht erwartet hast, dass eine alte Datei wiederhergestellt wird, könntest du die Deinstallation per Recovery (automatisch oder manuell) versuchen.</string>
     <string name="tap_to_dismiss">Antippen zum Ausblenden</string>
     <string name="sdcard_location">SD-Karte: %s</string>
+    <string name="installation_lollipop">Das Xposed-Framework ist nicht installiert. Bitte lade die aktuellste ZIP-Datei im XDA-Forum and flashe sie im Recovery.</string>
+    <string name="installed_lollipop">Xposed-Framework Version %s ist aktiv.</string>
+    <string name="installed_lollipop_inactive">Xposed-Framework Version %s ist installiert, aber nicht aktiv. Bitte schaue in den Logs nach Details.</string>
+    <string name="modules_updates_available">Aktualisierungen für Module sind verfügbar</string>
 
     <!-- File operations -->
     <string name="root_failed">Root-Zugriff fehlgeschlagen\n\nStelle sicher, dass das Gerät korrekt gerootet ist und Shell-Kommandos nicht blockiert werden.</string>
@@ -150,6 +165,7 @@
     <string name="settings_theme_light">Hell</string>
     <string name="settings_theme_dark">Dunkel</string>
     <string name="settings_theme_black">Schwarz (nützlich für AMOLED-Bildschirme)</string>
+    <string name="settings_default_view">Start-Ansicht</string>
 
     <!-- Support tab -->
     <string name="support_modules_label">Support für Module</string>
@@ -174,7 +190,7 @@
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> und <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Bitte kontaktiere uns <b>nicht</b> direkt für Support. Verwende stattdessen die folgenden Links.</string>
     <string name="about_translator_label">Übersetzer:</string>
-    <string name="translator">Nils Wasser (BobQuentok), rovo89</string>
+    <string name="translator">Nils Wasser (BobQuentok), rovo89, Philipp Ihling (ximmox)</string>
     <string name="about_version_label">Version dieser App:</string>
     <string name="about_source_label">Quellcode:</string>
     <string name="about_support_label">Support:</string>
@@ -200,5 +216,106 @@
     <string name="repo_download_failed_http">Herunterladen von %1$s fehlgeschlagen: %2$d (%3$s)</string>
     <string name="repo_download_failed">Herunterladen von %1$s fehlgeschlagen: %2$s</string>
     <string name="repo_load_failed">Verzeichnis konnte nicht geladen werden von %1$s:\n%2$s</string>
+
+    <string name="choose_color">Wähle eine Farbe…</string>
+    <string name="warning_installed_on_external_storage">Dieses Modul kann nicht geladen werden, da es auf der SD-Karte installiert ist. Bitte verschiebe es auf den Internen Speicher.</string>
+    <string name="warning_forward_locked">Dieses Modul kann nicht geladen werden, weil es "forward-locked" ist. Bitte kontaktiere den Entwickler des Moduls.</string>
+    <string name="export_modules">Exportiere Liste aktiver Module</string>
+    <string name="import_modules">Importiere Liste aktiver Module</string>
+    <string name="view">Ansicht</string>
+    <string name="export_">Export…</string>
+    <string name="import_">Import…</string>
+    <string name="export_enabled_modules">Exportiere Liste aktiver Module</string>
+    <string name="import_enabled_modules">Importiere Liste aktiver Module</string>
+    <string name="export_installed_modules">Exportiere Liste installierter Module</string>
+    <string name="import_installed_modules">Importiere Liste installierter Module</string>
+    <string name="no_installed_modules">Es ist kein Modul installiert!</string>
+    <string name="enable_heads_up">Aktiviere Heads-Up Benachrichtigungen</string>
+    <string name="enable_heads_up_summary">Dies aktiviert Heads-Up Benachrichtigungen bei neuen/aktualisierten Modulen</string>
+    <string name="nav_bar_coloration">Navigationsleiste einfärben</string>
+    <string name="no_backup_found">Keine Sicherung gefunden</string>
+    <string name="no_enabled_modules">Es ist kein Modul aktiviert!</string>
+
+    <string name="download_view_size">Größe: %s KB</string>
+    <string name="share">Teilen…</string>
+    <string name="back">Zurück</string>
+    <string name="loadingError">Fehler beim Laden der Xposed-Framework ZIP</string>
+    <string name="info">Info</string>
+    <string name="infoInstaller">
+        Name: %1$s
+        \nSDK: %2$d
+        \nArchitektur: %3$s
+        \nVersion: %4$s
+    </string>
+    <string name="infoUninstaller">
+        Name: %1$s
+        \nArchitektur: %2$s
+        \nDatum: %3$s
+    </string>
+    <string name="downloadZipOk">%1$s wurde korrekt heruntergeladen</string>
+    <string name="permissionGranted">Berechtigung erteilt</string>
+    <string name="permissionNotGranted">Diese Funktion funktioniert nur mit der Zugriffs-Berechtigung auf den Speicher.</string>
+    <string name="downloadUninstaller">Uninstaller herunterladen</string>
+    <string name="selectFile">Heruntergeladene Datei auswählen</string>
+    <string name="xposedZipNotFound">Zip nicht gefunden, vielleicht wurde eine neue Version veröffentlicht.</string>
+    <string name="warningArchitecture">WURDE DIE KORREKTE XPOSED ZIP ARCHITEKTUR GEWÄHLT?\nEine falsche ZIP-Datei kann dein Handy beschädigen!</string>
+    <string name="help">Hilfe</string>
+    <string name="helpChoose">
+        Wie wählt man die richtige ZIP-Datei?\n
+
+        xposed-v*-sdk%%SDK%%-%%ARCH%%\n\n
+
+        Hierbei ist:\n
+        %%SDK%% deine aktuelle Android SDK Version\n\n
+        %%ARCH%% die CPU Architektur deines Geräts
+    </string>
+    <string name="newVersion">Eine neue Version des Xposed-Installers ist verfügbar.</string>
+    <string name="update">Aktualisieren</string>
+    <string name="choose_icon">Wähle ein Launcher-Icon</string>
+    <string name="custom_icon">Icon ändern</string>
+    <string name="installationForbidden">Installation ist auf diesem Gerät nicht möglich. Um Xposed mit dieser App installieren zu können muss Android Lollipop oder höher installiert sein.</string>
+    <string name="installed_no_lollipop">Xposed-Framework ist installiert.</string>
+    <string name="not_installed_no_lollipop">Xposed-Framework ist nicht installiert.</string>
+    <string name="notify_module_update">Bei Modul-Aktualisierungen benachrichtigen</string>
+
+    <string name="md_back_label">Zurück</string>
+    <string name="md_done_label">OK</string>
+    <string name="md_cancel_label">Abbrechen</string>
+    <string name="md_choose_label">Auswählen</string>
+    <string name="md_error_label">Fehler</string>
+    <string name="md_storage_perm_error">Der App wurde die READ_EXTERNAL_STORAGE Berechtigung nicht gewährt.</string>
+    <string name="md_custom_label">Eigene</string>
+    <string name="md_presets_label">Voreinstellung</string>
+    <string name="changelog">Changelog</string>
+    <string name="scroll_top">Scrolle zum Anfang</string>
+    <string name="add_bookmark">Favorit markieren</string>
+    <string name="remove_bookmark">Entferne Favorit</string>
+    <string name="bookmarks">Favoriten</string>
+    <string name="no_bookmark_added">Kein Favorit hinzugefügt</string>
+    <string name="bookmark_added">Als Favorit hinzugefügt</string>
+    <string name="bookmark_removed">Von Favoriten entfernt</string>
+    <string name="undo">Rückgängig</string>
+    <string name="notification_coloration">Benachrichtigungs-Icon einfärben</string>
+    <string name="file_is_empty">Datei ist leer</string>
+    <string name="install_with_su">Installiere Modul mit Root</string>
+    <string name="install_with_su_summ">Wenn aktiviert werden Module ohne weitere Eingabeaufforderung installiert</string>
+    <string name="install_remove">Installieren und entfernen</string>
+    <string name="download_remove">Laden und entfernen</string>
+    <string name="module_saved">Modul gespeichert unter %1$s</string>
+    <string name="ignore_updates">Ignoriere Aktualisierungen</string>
+    <string name="ignore_updates_summ">Ignoriere Aktualisierungen für ein bestimmte Module.</string>
+    <string name="reboot_recovery">Neustart ins Recovery</string>
+    <string name="loading">Lade…</string>
+    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
+    <string name="chrome_custom_tabs_summ">Öffne Links in internem Browserbrowser</string>
+    <string name="scroll_bottom">Scrolle zum Ende</string>
+    <string name="open_drawer_summ">Beim Start automatisch das Navigations-Menü öffnen</string>
+    <string name="open_drawer">Öffne Navgations-Menü</string>
+    <string name="share_app">Teile App</string>
+    <string name="share_app_text">Schau dir das an: Xposed Installer im Material Design! %s</string>
+    <string name="disable_xposed">Deaktiviere Xposed-Framework</string>
+    <string name="status">Xposed Status</string>
+    <string name="xposed_on_next_reboot">Xposed-Framework wird aktiviert beim nächsten Neustart</string>
+    <string name="xposed_off_next_reboot">Xposed-Framework wird deaktiviert beim nächsten Neustart</string>
 
 </resources>
