--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -3,27 +3,27 @@
 
     <!-- General/various strings -->
     <string name="menuSend">Enviar</string>
-    <string name="menuSaveToSd">Salvar no cartão de memória</string>
-    <string name="xposed_not_active">A última versão do Framework não está ativa. Você instalou o Framework e reiniciou?</string>
+    <string name="menuSaveToSd">Salvar no cartão SD</string>
+    <string name="xposed_not_active">A última versão do Framework não está ativa. Você instalou o Framework e reiniciou o dispositivo?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome">Bem vindo ao <b>Xposed Installer</b>!\nPor favor, escolha o que quer fazer:</string>
+    <string name="welcome">Bem vindo ao <b>Xposed Installer</b>!\nPor favor, escolha o que deseja fazer:</string>
     <string name="tabInstall">Framework</string>
     <string name="tabInstallDescription">Aqui você pode gerenciar o Xposed Framework, que é necessário para que qualquer módulo funcione.</string>
     <string name="tabModules">Módulos</string>
-    <string name="tabModulesDescription">O Framework sozinho não tem nenhuma funcionalidade. Você precisa de módulos para isso. Nessa seção você pode ativar os módulos após instalá-los</string>
+    <string name="tabModulesDescription">O Framework sozinho não tem nenhuma funcionalidade. Você precisa de módulos para isso. Nessa seção você pode ativar os módulos após instalá-los.</string>
     <string name="tabDownload">Baixar</string>
     <string name="tabDownloadDescription">Essa seção te dá acesso ao repositório de módulos, assim você pode pesquisar e baixar os que você gosta e mantê-los atualizados.</string>
     <string name="welcome_framework_update_available">Uma atualização para o Xposed Framework está disponível(%s).</string>
-    <string name="welcome_update_available">Um ou mais atualização(ões) para os módulos disponíveis.</string>
+    <string name="welcome_update_available">Uma ou mais atualização(ões) para os módulos disponíveis.</string>
     <string name="tabSettings">Configurações</string>
     <string name="tabSettingsDescription">Vá para esta seção para configurar o Xposed Installer e o Framework.</string>
     <string name="tabSupport">Ajuda</string>
     <string name="tabSupportDescription">Encontre ajuda para erros relacionados ao Xposed. Você também pode doar para dizer obrigado pelo Xposed.</string>
     <string name="tabLogs">Registros</string>
-    <string name="tabLogsDescription">Exibir e guardar / enviar logs do Xposed Framework.</string>
+    <string name="tabLogsDescription">Exibir e guardar / enviar registros do Xposed Framework.</string>
     <string name="tabAbout">Sobre</string>
-    <string name="tabAboutDescription">Saiba mais sobre as pessoas que criaram Xposed, onde obter suporte para este app, etc.</string>
+    <string name="tabAboutDescription">Saiba mais sobre as pessoas que criaram o Xposed, onde obter suporte para este aplicativo, etc.</string>
 
     <!-- navigation view items -->
     <string name="nav_item_install">Framework</string>
@@ -33,37 +33,37 @@
     <string name="nav_item_support">Ajuda</string>
     <string name="nav_item_logs">Registros</string>
     <string name="nav_item_about">Sobre</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Abrir gaveta de navegação</string>
+    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
 
     <!-- Installer tab -->
-    <string name="install">Instalar / Atualizar</string>
+    <string name="install">Instalar/Atualizar</string>
     <string name="uninstall">Desinstalar</string>
     <string name="installedVersion">ativo</string>
     <string name="latestVersion">bundled</string>
     <string name="versions">Versões:</string>
     <string name="install_header_reboot">Reiniciar</string>
-    <string name="soft_reboot">Reinício suave</string>
+    <string name="soft_reboot">Reinício rápido</string>
     <string name="reboot">Reiniciar</string>
     <string name="areyousure">Você tem certeza?</string>
     <string name="phone_not_compatible">O Xposed (ainda) não é compatível com o Android SDK versão %1$d ou a arquitetura do seu processador (%2$s).</string>
-    <string name="not_tested_but_compatible">Xposed não foi testado com o Android SDK versão %d, mas parece ser compatível. Você pode tentar instalá-lo se você se sente um aventureiro.</string>
-    <string name="reboot_failed">O reinício falhou. Por favor, use a função de reinício normal do sistema</string>
+    <string name="not_tested_but_compatible">O Xposed não foi testado com o Android SDK versão %d, mas parece ser compatível. Você pode tentar instalá-lo se você se sente um aventureiro.</string>
+    <string name="reboot_failed">O reinício falhou. Por favor, use a função de reinício normal do sistema.</string>
     <string name="auto_flash_note">%s vai ser instalado automaticamente quando você apertar "OK".</string>
     <string name="manual_flash_note">Por favor, instale %s do cartão SD para completar a operação.</string>
     <string name="reboot_confirmation">Deseja reinciar agora?</string>
     <string name="reboot_recovery_confirmation">Deseja reiniciar para recuperação agora?</string>
     <string name="install_warning_title">Seja cuidadoso!</string>
-    <string name="install_warning">Em alguns casos, seu dispositivo pode não ligar depois de instalar o Xposed.\n\nSe você nunca ouviu falar sobre \"soft brick\" e \"bootloop\" antes ou se você não sabe como se recuperar dessa situação, <b>NÂO</b> instale o Xposed!\n\nEm qualquer caso, ter um backup recente é altamente recomendado.</string>
+    <string name="install_warning">Em alguns casos, seu dispositivo pode não ligar depois de instalar o Xposed.\n\nSe você nunca ouviu falar sobre \"soft brick\" e \"bootloop\" antes ou se você não sabe como se recuperar dessa situação, <b>NÃO</b> instale o Xposed!\n\nEm qualquer caso, ter um backup recente é altamente recomendado.</string>
     <string name="dont_show_again">Não mostre isso novamente</string>
     <string name="install_known_issue">Este parece ser um erro conhecido (\"%s\") com sua ROM. Instalar o Xposed pode não funcionar ou causar sérios problemas. Clique aqui para detalhes sobre esse erro.</string>
-    <string name="install_reverted">app_process versão \"%1$s\" foi instalado anteriormente, porém a versão \"%2$s\" foi encontrada agora. If you didn\'t expect an old file to be restored, you might want to try installing via recovery (auto or manual).</string>
-    <string name="uninstall_reverted">app_process was uninstalled previously but version \"%s\" was found now. Se você não esperava um arquivo antigo ser restaurado, você pode tentar instalar via recuperação	(automática ou manual).</string>
+    <string name="install_reverted">app_process versão \"%1$s\" foi instalado anteriormente, porém a versão \"%2$s\" foi encontrada agora. Se você não esperava um arquivo antigo ser restaurado, você pode tentar instalar pela recuperação (automática ou manual).</string>
+    <string name="uninstall_reverted">app_process foi desinstalado anteriormente, porém a versão \"%s\" foi encontrada agora. Se você não esperava um arquivo antigo ser restaurado, você pode tentar instalar pela recuperação (automática ou manual).</string>
     <string name="tap_to_dismiss">Toque para dispensar</string>
     <string name="sdcard_location">Cartão SD: %s</string>
-    <string name="installation_lollipop">O Xposed Framework não está instalado. Por favor, baixe o último arquivo zip pelo XDA e instale ele manualmente pela recuperação.</string>
-    <string name="installed_lollipop">Xposed framework versão %s está ativa.</string>
-    <string name="installed_lollipop_inactive">Xposed framework versão %s está instalado, mas não está ativo. Por favor, veja registros para detalhes.</string>
+    <string name="installation_lollipop">O Xposed Framework não está instalado. Por favor, baixe o último arquivo zip pelo XDA e instale-o manualmente pela recuperação.</string>
+    <string name="installed_lollipop">Xposed Framework versão %s está ativa.</string>
+    <string name="installed_lollipop_inactive">O Xposed Framework versão %s está instalado, mas não está ativo. Por favor, veja registros para detalhes.</string>
     <string name="modules_updates_available">Atualização(ões) de módulos disponíveis</string>
 
     <!-- File operations -->
@@ -87,7 +87,7 @@
     <string name="file_creating_directory">Criando diretório %s&#8230;</string>
     <string name="file_create_directory_failed">Não foi possível criar o diretório %s</string>
     <string name="file_writing_recovery_command">Escrevendo comando de recuperação&#8230;</string>
-    <string name="file_writing_recovery_command_failed">Escrever o comando de recuperação falhou. Por favor, use um método de instalação diferente.</string>
+    <string name="file_writing_recovery_command_failed">Falha ao escrever o comando de recuperação. Por favor, use um método de instalação diferente.</string>
     <string name="file_done">Pronto! As alterações terão efeito ao reiniciar.</string>
 
     <!-- Modules tab -->
@@ -141,7 +141,7 @@
     <string name="download_section_7d">Últimos 7 dias</string>
     <string name="download_section_30d">Últimos 30 dias</string>
     <string name="download_section_older">Mais de 30 dias atrás</string>
-    <string name="download_details_not_found">Nenhum módulo com o nome do pacote \"%s\" no repositório.</string>
+    <string name="download_details_not_found">Nenhum módulo com o nome de pacote \"%s\" no repositório.</string>
     <string name="download_no_versions">O autor não colocou nada ainda.</string>
     <string name="download_test_version_not_shown">Uma versão de testes está disponivel, entretanto não é exibida devido às suas configurações globais ou específicas do módulo.</string>
 
@@ -169,17 +169,17 @@
 
     <!-- Support tab -->
     <string name="support_modules_label">Ajuda para módulos</string>
-    <string name="support_modules_description">Pressione qualquer módulo na lista de módulos e selecione ajuda \"%1$s\".</string>
+    <string name="support_modules_description">Pressione qualquer módulo na lista de módulos e selecione \"%1$s\".</string>
     <string name="support_framework_label">Ajuda para o Framework/Installer</string>
     <string name="support_faq_label">FAQ/erros conhecidos</string>
     <string name="support_donate_label">Doar</string>
     <string name="support_donate_description">Se você gostaria de dizer obrigado pelo Xposed, você pode doar para rovo89 aqui</string>
 
     <!-- Logs tab  -->
-    <string name="logs_load_failed">Não foi possíveller o registro:</string>
+    <string name="logs_load_failed">Não foi possível ler o registro:</string>
     <string name="logs_save_failed">Não foi possível gravar o registro no cartão SD:</string>
     <string name="sdcard_not_writable">Cartão SD não encontrado ou não gravável</string>
-    <string name="log_too_large">O arquivo de registro é maior que %1$,d kB, pulado os primeiros %2$,d kB</string>
+    <string name="log_too_large">O arquivo de registro é maior que %1$,d kB, pulando os primeiros %2$,d kB</string>
     <string name="menuClearLog">Limpar registros agora</string>
     <string name="logs_cleared">Registro limpo com sucesso</string>
     <string name="logs_clear_failed">Não foi possível limpar o registro:</string>
@@ -187,11 +187,11 @@
 
     <!-- About tab -->
     <string name="about_developers_label">Principais desenvolvedores</string>
-    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> and <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>\n<a href="http://forum.xda-developers.com/member.php?u=4756862">-BioHaZard-</a> and <a href="http://forum.xda-developers.com/member.php?u=5345056">dvdandroid</a> for bug fixes and Material Design</string>
+    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> e <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>\n<a href="http://forum.xda-developers.com/member.php?u=4756862">-BioHaZard-</a> e <a href="http://forum.xda-developers.com/member.php?u=5345056">dvdandroid</a> pela correção de erros e Material Design</string>
     <string name="about_developers_warning">Por favor, <b>NÃO</b> contate-nos diretamente para ajuda, use o link abaixo.</string>
     <string name="about_translator_label">Tradutor</string>
     <string name="translator">Breno Corrêa</string>
-    <string name="about_version_label">Versão</string>
+    <string name="about_version_label">Versão:</string>
     <string name="about_source_label">Código fonte</string>
     <string name="about_support_label">Obtenha ajuda aqui:</string>
     <string name="about_libraries_label">Bibliotecas usadas</string>
@@ -239,7 +239,7 @@
     <string name="download_view_size">Tamanho: %s KB</string>
     <string name="share">Compartilhar com…</string>
     <string name="back">Voltar</string>
-    <string name="loadingError">Erro ao carregar Xposed Zip frameworks</string>
+    <string name="loadingError">Erro ao carregar zips do Xposed Framework</string>
     <string name="info">Info</string>
     <string name="infoInstaller">
         Nome: %1$s
@@ -248,9 +248,9 @@
         \nVersão: %4$s
     </string>
     <string name="infoUninstaller">
-        Nome: %1$s
-        \nArquitetura: %2$s
-        \nData: %3$s
+        Name: %1$s
+        \nArchitecture: %2$s
+        \nDate: %3$s
     </string>
     <string name="downloadZipOk">%1$s baixado corretamente</string>
     <string name="permissionGranted">Permissões garantidas</string>
@@ -274,8 +274,8 @@
     <string name="choose_icon">Escolha um ícone</string>
     <string name="custom_icon">Ícone customizado</string>
     <string name="installationForbidden">A instalação não foi possível neste dispositivo. Para instalar o Xposed através desse aplicativo, o dispositivo deve exceutar Android Lollipop ou superior.</string>
-    <string name="installed_no_lollipop">Xposed framework está instalado.</string>
-    <string name="not_installed_no_lollipop">Xposed framework não está instalado.</string>
+    <string name="installed_no_lollipop">O Xposed Framework está instalado.</string>
+    <string name="not_installed_no_lollipop">O Xposed Framework não está instalado.</string>
     <string name="notify_module_update">Habilitar notificação de atualização de módulo</string>
 
     <string name="md_back_label">Voltar</string>
@@ -286,7 +286,7 @@
     <string name="md_storage_perm_error">Seu aplicativo não tem a permissão READ_EXTERNAL_STORAGE garantida.</string>
     <string name="md_custom_label">Custom</string>
     <string name="md_presets_label">Presets</string>
-    <string name="changelog">Log de mudanças</string>
+    <string name="changelog">Registro de mudanças</string>
     <string name="scroll_top">Rolar para o topo</string>
     <string name="add_bookmark">Adicionar marcador</string>
     <string name="remove_bookmark">Remover marcador</string>
@@ -306,5 +306,16 @@
     <string name="ignore_updates_summ">Ignorar atualizações para um módulo especifico.</string>
     <string name="reboot_recovery">Reiniciar para recuperação</string>
     <string name="loading">Carregando…</string>
+    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
+    <string name="chrome_custom_tabs_summ">Abrir links no navegador interno</string>
+    <string name="scroll_bottom">Rolar ao topo</string>
+    <string name="open_drawer_summ">Abre a barra de navegação automaticamente ao iniciar</string>
+    <string name="open_drawer">Abrir barra de navegação automaticamente</string>
+    <string name="share_app">Compartilhar aplicativo</string>
+    <string name="share_app_text">Olhe isso: Xposed Installer com Material Design! %s</string>
+    <string name="disable_xposed">Desabilitar Xposed</string>
+    <string name="status">Estado do Xposed</string>
+    <string name="xposed_on_next_reboot">O Xposed framework vai ser ativado no próximo reinício</string>
+    <string name="xposed_off_next_reboot">O Xposed framework vai ser desativado no próximo reinício</string>
 
 </resources>
